<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.noear</groupId>
    <artifactId>Weed3_java</artifactId>
    <version>dev</version>
    <packaging>pom</packaging>

    <name>root</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
    </properties>
    
    <modules>
        <module>weed3-parent</module>

        <module>_test</module>
<!--        <module>_demo/_demo.weed3_solon</module>-->
<!--        <module>_demo/_demo.weed3_springboot</module>-->
    </modules>

</project>
